<resources>
    <string name="app_name">Fleeting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_collection">我的收藏</string>
    <string name="log_in">登  录</string>
    <string name="log_out">退出登录</string>
    <string name="my_category">分类设置</string>
    <string name="my_comment">我的评论</string>
    <string name="my_history">观看历史</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="info_login_out">已退出登录</string>
    <string name="info_net_error">网络异常</string>
    <string name="info_test_long">这是一长串测试信息，无任何意义，仅用于填充：
        能能能能能能能能能能能能能能能能能能能能能能能能能能能能能能能能能能能能
        用用用用用用用用用用用用用用用用用用用用用用用用用用用用用用用用用用用用
        能能能能能能能能能能能能能能能能能能能能能能能能能能能能能能能能能能能能
        用用用用用用用用用用用用用用用用用用用用用用用用用用用用用用用用用用用用
    </string>
    <string name="action_register">注册</string>
    <string name="info_wrong_passwd">账号密码错误</string>
    <string name="info_registed">该用户名已被注册</string>
    <string name="info_register_success">注册成功</string>
    <string name="info_not_registed">未注册</string>
    <string name="not_login">未登录</string>
    <string name="collect_success">收藏成功</string>
    <string name="collect_fail">收藏失败</string>
    <string name="collect_cancel_success">取消收藏</string>
</resources>
