<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <com.facebook.drawee.view.SimpleDraweeView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            app:actualImageResource="@drawable/bottomnav_setting"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your Name"
            android:textSize="20dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_my_collection"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/my_collection"
            android:textAlignment="center"
            android:textSize="25dp" />
        <TextView
            android:id="@+id/txt_my_category"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="25dp"
            android:text="@string/my_category"/>
        <TextView
            android:id="@+id/txt_my_comment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="25dp"
            android:text="@string/my_comment"/>
        <TextView
            android:id="@+id/txt_my_history"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="25dp"
            android:text="@string/my_history" />

        <TextView
            android:id="@+id/txt_log_out"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/log_out"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:textSize="25dp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>